--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "axios-mock-models",
-  "homepage": "http://github.com/bprinty/axios-mock-models",
-  "repository": "http://github.com/bprinty/axios-mock-models",
-  "version": "0.1.0",
+  "name": "js-package",
+  "homepage": "https://bprinty.github.io/js-package",
+  "repository": "https://github.com/bprinty/js-package",
+  "version": "0.0.2",
   "authors": [
     "Blake Printy <bprinty@gmail.com> (http://bprinty.github.io)"
   ],
-  "description": "Mock REST Data Models with Axios",
+  "description": "Fight for the Users!",
   "license": "Apache-2.0",
   "keywords": [],
   "ignore": [
@@ -14,48 +14,55 @@
     "node_modules",
     "tests",
     "src",
+    "coverage",
     "package-lock.json"
   ],
   "scripts": {
-    "build": "webpack",
-    "build:dev": "webpack --mode=development",
+    "clean": "rm -rf node_modules dist coverage",
+    "build": "rollup -c",
+    "build:watch": "rollup -c --watch",
     "lint": "eslint src --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --config .jest.json",
+    "test:watch": "jest --config .jest.json --watch",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --watch",
-    "docs": "vuepress build docs",
-    "docs:api": "vuepress-jsdoc --source ./src/ --dist docs --folder api --title API --exclude *.test.js,exclude.js",
-    "docs:dev": "vuepress dev docs",
-    "docs:deploy": "yarn docs && gsutil -m rsync -r docs/.vuepress/dist gs://atgtag/axios-mock-models",
-    "readme": "vuepress dev",
-    "publish": "npm publish"
+    "docs": "vuepress build docs --no-cache",
+    "docs:dev": "vuepress dev docs --no-cache",
+    "docs:clean": "rm -rf docs/.vuepress/dist",
+    "docs:deploy": "yarn docs:clean && yarn docs && git init && git add -A && git commit -m \"$npm_package_name, $npm_package_version\" && git push -f $npm_package_repository master:gh-pages",
+    "tag": "git tag -f $npm_package_version && git push -f origin $npm_package_version",
+    "release": "yarn build && yarn tag && yarn docs:deploy && yarn publish"
   },
   "main": [
-    "dist/index.min.js"
+    "dist/index.min.js",
+    "dist/index.cjs.js",
+    "dist/index.esm.js",
+    "dist/index.css"
   ],
-  "dependencies": {
-    "axios": "^0.19.2",
-    "lodash": "^4.17.15",
-    "validator": "^12.2.0",
-    "vue": "^2.6.10",
-    "vuex": "^3.0.1"
-  },
+  "module": "dist/index.esm.js",
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@vuepress/theme-vue": "^1.3.0",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
+    "braintree-jsdoc-template": "^3.3.0",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
     "jest": "^25.1.0",
     "mermaid": "^8.4.7",
-    "mocha": "^6.1.4",
-    "mocha-phantomjs": "^4.0.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-terser": "^5.3.0",
     "vuepress": "^1.2.0",
     "vuepress-jsdoc": "^2.0.0",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.10"
+    "vuepress-plugin-autodoc": "^0.1.6"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15"
   }
 }
