Working through first-pass at documentation, adding custom styling

--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Vue CLI",
-  "short_name": "Vue CLI",
+  "name": "JS Package",
+  "short_name": "JS Package",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
