--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "docs:clean": "rm -rf docs/.vuepress/dist",
     "docs:deploy": "yarn docs:clean && yarn docs && git init && git add -A && git commit -m \"$npm_package_name, $npm_package_version\" && git push -f $npm_package_repository master:gh-pages",
     "tag": "git tag -f $npm_package_version && git push -f origin $npm_package_version",
-    "release": "yarn build && yarn tag && yarn docs:deploy && yarn publish"
+    "release": "yarn build && yarn release:tag && yarn docs:deploy && yarn publish"
   },
   "main": [
     "dist/index.min.js",
@@ -43,6 +43,7 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@vuepress/theme-vue": "^1.3.0",
     "babel-jest": "^25.1.0",
