--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "docs": "vuepress build docs --no-cache",
     "docs:dev": "vuepress dev docs --no-cache",
     "docs:clean": "rm -rf docs/.vuepress/dist",
-    "docs:deploy": "yarn docs:clean && yarn docs && git init && git add -A && git commit -m \"$npm_package_name, $npm_package_version\" && git push -f git@github.com:bprinty/jest-axios.git master:gh-pages",
+    "docs:deploy": "yarn docs:clean && yarn docs && cd docs/.vuepress/dist/ && git init && git add -A && git commit -m \"$npm_package_name, $npm_package_version\" && git push -f git@github.com:bprinty/jest-axios.git master:gh-pages",
     "git:tag": "git tag -f $npm_package_version && git push -f origin $npm_package_version",
     "release": "yarn build && yarn git:tag && yarn docs:deploy && yarn publish"
   },
